Aggiunta nuova api getUserId
